Fix parameter/response documentation, add PUT and DELETE routes
