# controllers/books.js
@@ -11,12 +11,12 @@ const getAll = async (req, res) => {
 
 const getSingle = async (req, res) => {
   const idString = String(req.params.id);
-  const contactId = new ObjectId(idString);
+  const bookId = new ObjectId(idString);
   const result = await mongoDb
     .getDatabase()
     .db('Project2')
     .collection('books')
-    .find({ _id: contactId });
+    .find({ _id: bookId });
   result.toArray().then((books) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(books[0]);
@@ -41,4 +41,35 @@ const addBook = async (req, res) => {
   }
 };
 
-module.exports = { getAll, getSingle, addBook };
+const updateBook = async (req, res) => {
+    const idString = String(req.params.id);
+    const bookId = new ObjectId(idString);
+    const book = {
+        title: req.body.title,
+        author: req.body.author,
+        publisher: req.body.publisher,
+        isbn: req.body.isbn,
+        genre: req.body.genre,
+        pageCount: req.body.pageCount,
+        rating: req.body.rating
+      };
+      const response = await mongoDb.getDatabase().db('Project2').collection('books').replaceOne({_id: bookId}, book);
+      if (response.modifiedCount > 0) {
+        res.status(204).send();
+      } else {
+        res.status(500).json(response.error || 'Something went wrong while updating the book.');
+      }
+}
+
+const deleteBook = async (req, res) => {
+    const idString = String(req.params.id);
+    const bookId = new ObjectId(idString);
+      const response = await mongoDb.getDatabase().db('Project2').collection('books').deleteOne({_id: bookId});
+      if (response.deletedCount > 0) {
+        res.status(204).send();
+      } else {
+        res.status(500).json(response.error || 'Something went wrong while deleting the book.');
+      }
+}
+
+module.exports = { getAll, getSingle, addBook, updateBook, deleteBook };
